--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ input[type="checkbox"]:checked + label {
     border-radius: 10px;
     padding: 5px;
     height: 50px;
-    width: 90vw;
+    width: 93vw;
     overflow-y: hidden;
   }
   .selected-character-checked {
@@ -113,6 +113,6 @@ input[type="checkbox"]:checked + label {
   }
 }
 
-.temp {
+.combination-container {
   font-weight: bold;
 }
