--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@ body::-webkit-scrollbar-thumb {
   color: skyblue;
   margin-left: 10px;
 }
-.information-modall {
-  position: fixed;
-  width: 60%;
-  left: 20%;
-  background-color: white;
+.information-closer {
+  float: right;
+  font-size: 20px;
+  margin: 5px;
+  cursor: pointer;
 }
 .information-modall-bg {
   position: fixed;
@@ -27,6 +27,54 @@ body::-webkit-scrollbar-thumb {
   top: 0px;
   width: 100vw;
   height: 100vh;
+  z-index: 1;
+}
+.information-modall {
+  position: fixed;
+  width: 60%;
+  height: 70%;
+  left: 20%;
+  overflow-y: scroll;
+
+  padding: 10px;
+  background-color: skyblue;
+  color: white;
+  border-radius: 10px;
+  z-index: 2;
+}
+.information-modall::-webkit-scrollbar {
+  background-color: skyblue;
+  border-radius: 10px;
+  width: 10px;
+}
+.information-modall::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 10px;
+}
+.information-modall p {
+  text-indent: 10px;
+}
+.information-summary-btn {
+  padding: 5px;
+  border: none;
+  border: skyblue 1px solid;
+  background: white;
+
+  font-size: 15px;
+  text-align: center;
+  font-weight: bold;
+  color: skyblue;
+  width: 100px;
+  cursor: pointer;
+}
+.information-summary-btn:nth-child(1) {
+  border-radius: 5px 0 0 5px;
+}
+.information-summary-btn:nth-child(3) {
+  border-radius: 0 5px 5px 0;
+}
+.image-resource {
+  font-size: 12px;
 }
 
 .main-container {
