--- a/src/App.css
+++ b/src/App.css
@@ -122,9 +122,11 @@ input[type="checkbox"]:checked + label {
   height: 100px;
 }
 .control-btn {
-  border: none;
+  border: solid white 2px;
+  border-radius: 10px;
+  margin-bottom: 5px;
   float: right;
-  width: 75px;
+  width: 80px;
   height: 30px;
   background-color: skyblue;
 
@@ -187,7 +189,7 @@ input[type="checkbox"]:checked + label {
 .to-top {
   position: fixed;
   bottom: 40px;
-  right: 0px;
+  right: 10px;
 
   background-color: rgb(105, 105, 255);
   border-radius: 10px;
