--- a/src/App.css
+++ b/src/App.css
@@ -381,6 +381,42 @@ input[type="checkbox"]:checked + label {
 .character-weapons img {
   width: 150px;
 }
+.character-artifacts {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+
+  background-color: skyblue;
+}
+.character-artifacts div {
+  border: 1px solid white;
+  min-height: 100px;
+  color: white;
+}
+.character-artifacts div:nth-child(2n-1) {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+.character-artifacts div:nth-child(2n) {
+  padding: 10px;
+}
+.character-artifacts img {
+  width: 150px;
+}
+.character-artifacts .artifacts-multi {
+  position: relative;
+  justify-content: left;
+  min-height: 150px;
+}
+.character-artifacts .artifacts-multi img {
+  position: absolute;
+  left: 0;
+}
+.character-artifacts .artifacts-multi img:nth-child(2) {
+  position: absolute;
+  left: 50px;
+}
 
 @media screen and (max-width: 850px) {
   .materials-imgs > div > img {
@@ -418,5 +454,38 @@ input[type="checkbox"]:checked + label {
     display: grid;
     grid-template-columns: repeat(5, 75px);
     grid-template-rows: 75px;
+  }
+
+  .character-weapons {
+    display: grid;
+    grid-template-columns: 120px 1fr;
+
+    background-color: skyblue;
+  }
+  .character-weapons img {
+    width: 110px;
+  }
+  .character-artifacts {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+
+    background-color: skyblue;
+  }
+  .character-artifacts img {
+    width: 150px;
+  }
+  .character-artifacts .artifacts-multi {
+    position: relative;
+    justify-content: left;
+    min-height: 200px;
+  }
+  .character-artifacts .artifacts-multi img {
+    position: absolute;
+    top: 0;
+  }
+  .character-artifacts .artifacts-multi img:nth-child(2) {
+    position: absolute;
+    left: 0;
+    top: 50px;
   }
 }
