--- a/src/App.css
+++ b/src/App.css
@@ -465,6 +465,10 @@ input[type="checkbox"]:checked + label {
   left: 50px;
 }
 
+.partner-images img {
+  width: 100px;
+}
+
 @media screen and (max-width: 850px) {
   .materials-imgs > div > img {
     width: 100%;
