--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@ body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   border: 1px solid white;
 }
+body {
+  padding-bottom: 50px;
+}
 p {
   text-indent: 10px;
 }
